Add npx to npm test run command to make the script run on machines that does not have jest installed globally

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A weather forecast client using the open weather api",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npx jest",
     "sydney-forecast": "node index.js"
   },
   "repository": {
